<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">
    
    <TextView
        android:id="@+id/main_title_enc"
        android:text="@string/encryption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="18sp" />
    
    <EditText
        android:id="@+id/edit_plaintext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/main_title_enc"
        android:layout_marginTop="20dp"
        android:digits="0123456789ABCDEF"
        android:hint="@string/plaintext"
        android:maxLength="32"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edit_key"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_plaintext"
        android:layout_below="@+id/edit_plaintext"
        android:digits="0123456789ABCDEF"
        android:hint="@string/key"
        android:maxLength="64"
        android:singleLine="true" />

    <Button
        android:id="@+id/button_encrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/deedit_plaintext"
        android:layout_below="@+id/edit_key"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:onClick="sendMessage"
        android:text="@string/button_encrypt" />

    <TextView
        android:id="@+id/main_title_dec"
        android:text="@string/decryption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:layout_below="@+id/button_encrypt"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="18sp" />
    
    <EditText
        android:id="@+id/deedit_plaintext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_title_dec"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:digits="0123456789ABCDEF"
        android:hint="@string/ciphertext"
        android:maxLength="32"
        android:singleLine="true" />

    <EditText
        android:id="@+id/deedit_key"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/deedit_plaintext"
        android:layout_below="@+id/deedit_plaintext"
        android:digits="0123456789ABCDEF"
        android:hint="@string/key"
        android:maxLength="64"
        android:singleLine="true" />
    
    <Button
        android:id="@+id/button_decrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/deedit_key"
        android:layout_below="@+id/deedit_key"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:onClick="deSendMessage"
        android:text="@string/button_decrypt" />

</RelativeLayout>