<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DisplayMessageActivityDec" >

    <TextView
        android:id="@+id/ciphertext_caps"
        android:text="@string/ciphertext_caps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textAllCaps="true"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/ciphertext_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ciphertext_caps"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text=""
        android:textSize="14sp"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/key_caps"
        android:text="@string/key_caps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ciphertext_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textAllCaps="true"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/key_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/key_caps"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text=""
        android:textSize="14sp"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/plaintext_caps"
        android:text="@string/plaintext_caps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/key_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textAllCaps="true"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/plaintext_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/plaintext_caps"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text=""
        android:textSize="14sp"
        android:textIsSelectable="true" />
    
</RelativeLayout>
